# bazel-playground

./: .gitignore
plain-ts-lib/: BUILD.bazel  WORKSPACE  package-lock.json  package.json  pnpm-lock.yaml
plain-ts-lib/.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
plain-ts-lib/src/: BUILD.bazel  a.spec.ts
